fix navbar alignment

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -3,11 +3,17 @@
     padding: 0.8rem;
     display: flex;
     flex-direction: row;
-    background-color: #333;
+    align-items: center;
+    justify-content: center;
+    background-color: #222;
 }
 
 .navbarLeft {
     flex: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbarRight {
@@ -22,6 +28,8 @@
     outline: none;
     cursor: pointer;
     transition: 0.075s linear color;
+    margin: 0;
+    padding: 0;
 }
 
 .navbarLink:not(:last-child) {
